2009-05-29  Michael Banck  <mbanck@gmx.net>

	* src/formats/gausszmatformat.cpp (ReadMolecule): Account for negative
	variable reference in dihedral angles, patch by Hugh Chaffey-Millar.
	Fixes PR#2798297.
	
2009-05-28  Michael Banck  <mbanck@gmx.net>

	* src/formats/gausszmatformat.cpp (ReadMolecule): Fix reading of
	dihedral angles, patch by Donnie Berkholz <dberkholz@gentoo.org>.

2009-05-27  Noel O'Boyle  <baoilleach@gmail.com>

	* scripts/openbabel-python.i: Allow access to OBBuilder and matrix3x3

2009-05-19  Michael Banck  <mbanck@gmx.net>

	* src/formats/gaussformat.cpp (ReadMolecule): Add parsing of NMR
	isotropic shifts.  Patch by David C. Lonie.  Fixes PR#2787088.

2009-05-12  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/generic.cpp (OBUnitCell::FillUnitCell): Update with code
	from Avogadro. Now should handle duplicate atoms.

2009-05-04  Michael Banck  <mbanck@gmx.net>

	* src/formats/moldenformat.cpp (ReadMolecule): Read in atom
	coordinates via [FR-COORD] block if no atoms have been read
	previously.  Fixes PR#2786716.

	* src/formats/gamessformat.cpp (ReadMolecule): Fix parsing of
	intensities.  Keep on reading displacements even if there is only a
	single one.  Rewritten normal coordinates parsing.  Fixes PR#2782132.

2009-05-01  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* data/element.txt, data/element.h: Update atomic radii with
	consistent sets from recent publications.

2009-04-27  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/openbabel/molchrg.h, include/openbabel/internalcoord.h,
	include/openbabel/typer.h, include/openbabel/chains.h,
	include/openbabel/descriptor.h, include/openbabel/atomclass.h,
	include/openbabel/parsmart.h, include/openbabel/grid.h: 
	Improved forward declarations, thanks to Noel's python script.

2009-04-26  Michael Banck  <mbanck@gmx.net>

	* src/formats/moldenformat.cpp (WriteMolecule): New method,
	implementing atom coordinates and vibrations.  Set flags() to
	WRITEONEONLY for now.
